fix: video thumbnails stuck on loading, post page overflow

--- a/src/views/post-page/post-page.module.css
+++ b/src/views/post-page/post-page.module.css
@@ -1,3 +1,4 @@
 .content {
   margin-bottom: 150px;
+  overflow-x: hidden;
 }
